# publication-intelligence

./: .env.example  .env.test  .gitignore  ACCESS-POLICY-DEBUG.md  COMMANDS.md  DARK_MODE.md  PHASE-7-COMPLETE.md  PHASE-7-IMPLEMENTATION-STATUS.md  README.md  TEST-FIXES-ROUND-2.md  TEST-FIXES-ROUND-3.md  TEST-FIXES-SUMMARY.md  TESTING.md  TEST_FIXES_SUMMARY.md  biome.json  changed-in-this-task.md  drizzle.config.ts  gel-roles.md  johns-todos.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  repo-cleanup-plan.plan.md  todos.md  tsconfig.json  turbo.json  vitest.config.ts
.cursor/commands/: fix.md  msg.md
.cursor/rules/: database-migrations.mdc  documentation-policy.mdc  event-emission.mdc  frontend-organization.mdc  logging-standards.mdc  node-version-requirement.mdc  package-installation.mdc  running-interaction-tests.mdc  testing-policy.mdc  tooltip-patterns.mdc  typescript-arrow-functions.mdc  ui-component-testing.mdc  user-run-commands.mdc  (+1 more)
.husky/: pre-commit
apps/index-pdf-extractor/: .gitignore  README.md  __init__.py  extract_pdf.py  pyproject.toml
apps/index-pdf-extractor/tests/: __init__.py  generate_sample_pdf.py  test_extract.py
business-documents/: economic-model.md  le-plan.md  mvp-definition.md  risks-and-unknowns.md  table-of-contents.md  technical-architecture.md
docs/: README.md  test-utilities.md
scripts/: README.md  copy-pdf-workers.ts  format-interaction-test-results.ts  format-unit-test-results.ts  lint-access-policies.sh  test-affected-workspaces.ts  update-bbox-to-bboxes.sh  validate-auth-key.sh  validate-env.ts  workspace-utils.ts
(+1179 files in other folders)
