[project]
name = "pubint-index-pdf-extractor"
version = "0.1.0"
description = "PyMuPDF-based canonical text extraction service for Index PDF"
requires-python = ">=3.11"
dependencies = [
    "PyMuPDF>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
